[package]
name = "Pack_Creator"
version = "1.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"
phf = { version = "0.11", features = ["macros"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "tiff"]  # Only include needed formats


