[package]
name = "Pack_Creator"
version = "1.3.0"
edition = "2024"

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"
phf = { version = "0.11", features = ["macros"] }
rayon = "1.11.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "tiff"]  # Only include needed formats


